# cpp_fatfs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yml
cmake/: external.cmake
coverage/: coverage.xml
inc/: diskio.hpp  diskio_base.hpp  diskio_hardware_base.hpp  diskio_hardware_mmc.hpp  diskio_hardware_usb.hpp  diskio_mmc.hpp  diskio_protocol_spi.hpp  diskio_protocol_usb.hpp  diskio_usb.hpp  fatfs.hpp  fatfs_spi_device.hpp  ff.hpp  ff_common.hpp  ff_core.hpp  ff_driver.hpp  ff_driver_hidden_impl.hpp  ff_driver_public_impl.hpp  ff_types.hpp  ffconf.hpp
inc/diskio_layer/physical/: diskio_hardware_base.hpp  diskio_hardware_mmc.hpp  diskio_hardware_usb.hpp
inc/diskio_layer/protocol/: diskio_protocol_sdio.hpp  diskio_protocol_spi.hpp
include/: ff_driver.hpp  ff_driver_common.hpp  ff_driver_hidden_impl.hpp  ff_driver_public_impl.hpp  ff_types.hpp
include/diskio_layer/physical/: diskio_hardware_base.hpp  diskio_hardware_mmc.hpp  diskio_hardware_usb.hpp
include/diskio_layer/protocol/: diskio_protocol_sdio.hpp  diskio_protocol_spi.hpp  diskio_protocol_usb.hpp
lib/ff14b/: CMakeLists.txt
lib/ff14b/source/: ff.cpp  ff.hpp  ffsystem.cpp  ffunicode.cpp
src/: CMakeLists.txt  diskio.cpp  diskio_base.cpp  diskio_hardware_base.cpp  diskio_mmc.cpp  diskio_mmc_sdio_impl.cpp  diskio_mmc_spi_impl.cpp  diskio_usb.cpp  diskio_usb_impl.cpp  fatfs.cpp  ff.cpp  ff_common.cpp  ff_driver.cpp  ff_driver_common.cpp  ffsystem.cpp  ffunicode.cpp
src/diskio_layer/implementation/: diskio_mmc_sdio.cpp  diskio_mmc_spi.cpp  diskio_usb.cpp
tests/: CMakeLists.txt  README.md  catch_cpp_fatfs.cpp  mock_cmsis.hpp
